<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.narcolepsyquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card2_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            card_view:cardCornerRadius="@dimen/card_corner_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gradient_nightfade" />

                <TextView
                    android:id="@+id/epworth_info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="@dimen/main_text_padding_bottom"
                    android:paddingTop="@dimen/main_text_padding_top"
                    android:text="@string/epworth_info_text"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="@dimen/main_text" />

                <Button
                    android:id="@+id/epworth_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/epworth_info_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/main_button_margin"
                    android:layout_marginRight="@dimen/main_button_margin"
                    android:background="@drawable/rounded_button"
                    android:text="@string/epworth_start_button" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card1_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            card_view:cardCornerRadius="@dimen/card_corner_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gradient_deepblue" />

                <TextView
                    android:id="@+id/quiz_info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="@dimen/main_text_padding_bottom"
                    android:paddingTop="@dimen/main_text_padding_top"
                    android:text="@string/quiz_info_text"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="@dimen/main_text" />

                <Button
                    android:id="@+id/quiz_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/quiz_info_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/main_button_margin"
                    android:layout_marginRight="@dimen/main_button_margin"
                    android:background="@drawable/rounded_button"
                    android:text="@string/quiz_start_button" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card3_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            card_view:cardCornerRadius="@dimen/card_corner_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gradient_winterneva" />

                <TextView
                    android:id="@+id/learn_info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="@dimen/main_text_padding_bottom"
                    android:paddingTop="@dimen/main_text_padding_top"
                    android:text="@string/learn_info_text"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="@dimen/main_text" />

                <Button
                    android:id="@+id/learn_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/learn_info_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/main_button_margin"
                    android:layout_marginRight="@dimen/main_button_margin"
                    android:background="@drawable/rounded_button"
                    android:text="@string/learn_start_button" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
